[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/BoxNinePatch.png" type="Texture" id=2]
[ext_resource path="res://Fonts/FontDlg.tres" type="DynamicFont" id=3]

[node name="Dialogue" type="Node2D"]
position = Vector2( 86, 116 )
z_index = 3200
script = ExtResource( 1 )

[node name="Box" type="NinePatchRect" parent="."]
margin_right = 148.0
margin_bottom = 40.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 6, 6 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Text" type="Label" parent="."]
margin_left = 6.0
margin_top = 5.0
margin_right = 142.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
custom_constants/line_spacing = 2
text = "Hello there, Cosmo! How are you doing on this fine summer afternoon?"
autowrap = true
percent_visible = 0.0

[node name="TimerRollText" type="Timer" parent="."]
wait_time = 0.03

[node name="TimerBuffer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="timeout" from="TimerRollText" to="." method="_on_TimerRollText_timeout"]
[connection signal="timeout" from="TimerBuffer" to="." method="_on_TimerBuffer_timeout"]
